# c4_17mme

./: CMakeLists.txt  gcov.sh  gcovr.sh
Abdellaoui/: CMakeLists.txt  Console_UI.cpp  Console_UI.h  Game.cpp  Game.h  UserInterface.h  gTest.cpp  game_ui.cpp  gui_game.cpp  main.cpp
Barza/: CMakeLists.txt  Console_UI.cpp  Console_UI.h  Game.cpp  Game.h  UserInterface.h  main.cpp  test.cpp
Ceribas/: CMakeLists.txt  Console_UI.cpp  Console_UI.h  Game.cpp  Game.h  UserInterface.h  main.cpp  test.cpp  teststate.txt
Dely/: CMakeLists.txt  Console.cpp  Console_UI.h  Spiel.cpp  Spiel.h  UserInterface.h  main.cpp  test.cpp
Maurer/: CMakeLists.txt  Console_UI.cpp  Console_UI.h  Game.cpp  Game.h  main.cpp  test.cpp
Neubauer/: CMakeLists.txt  GameLogic.cpp  GameLogic.h  UI.cpp  UI.h  main.cpp  test.cpp
Neubauer/gui/: GuiSetting.cpp
Ofenboeck/: CMakeLists.txt  TestArea.cpp  main.cpp
Ofenboeck/include/: Console_UI.h
Ofenboeck/src/: Console_UI.cpp  Funktions.cpp
Putz/: CMakeLists.txt
Putz/src/main/: ConsoleUI.cpp  ConsoleUI.h  GameLogic.cpp  GameLogic.h  main.cpp
Putz/src/main/gui/: Gui.h  ResourceManager.cpp
Putz/src/tests/: GameLogic.cpp
Sallachner/: CMakeLists.txt  Console.cpp  Console.h  Logic.cpp  Logic.h  TEST.cpp  main.cpp
Scheiblauer/: CMakeLists.txt  TestArea.cpp  main.cpp
Scheiblauer/include/: Console_UI.h  Funktions.h  UserInterface.h
Scheiblauer/include/gui/: ImageResource.cpp
Scheiblauer/src/: Console_UI.cpp  Funktions.cpp
Stefan/: CMakeLists.txt  Console_UI.cpp  Console_UI.h  Game.cpp  Game.h  UserInterface.h  main.cpp  test.cpp
Sulzbacher/: CMakeLists.txt  Console_UI.cpp  Console_UI.h  Game.cpp  Game.h  UserInterface.h  main.cpp  test.cpp
Viljoen/: CMakeLists.txt  LogicTest.cpp  UserInterface.h  main.cpp
Viljoen/include/: ConsoleUI.h  GameLogic.h
Viljoen/src/: ConsoleUI.cpp  GameLogic.cpp
Wagner/: CMakeLists.txt  ConnectFour.h  ConsoleInterface.cpp  ConsoleInterface.h  Game.cpp  Game.h  Testing.cpp  connectFour.cpp  main.cpp
Weissmann/: CMakeLists.txt  GameLogik.cpp  GameLogik.h  UI_Console.cpp  UI_Console.h  UserInterface.h  main.cpp  testCaseVierGewinnt.cpp
Weissmann/gui/: ResourceManager.h
Weissmann/include/: UI_Console.h  teserrr.h
Weissmann/src/: UI_Console.cpp  teserrr.cpp
Wenzl/: CMakeLists.txt  Console_UI.cpp  Console_UI.h  Game.cpp  Game.h  emirp.cpp  emirp.h  main.cpp
Wimmer/: CMakeLists.txt  Console_UI.cpp  Console_UI.h  Game.cpp  Game.h  emirp.h  main.cpp  test.cpp
_common/: UserInterface.h
_common/gui/: Gui.cpp  GuiSetting.h  ImageResource.h  SDLWrapper.h
_common/tests/: AbdellaouiGameAdapter.h  BarzaGameAdapter.h  CeribasGameAdapter.h  DelyGameAdapter.h  GameAdapterBase.h  GuiMock.cpp  GuiMock.h  MaurerGameAdapter.h  MockUserInterface.h  NeubauerGameAdapter.h  OfenboeckGameAdapter.h  PutzGameAdapter.h  SallachnerGameAdapter.h  ScheiblauerGameAdapter.h  StefanGameAdapter.h  SulzbacherGameAdapter.h  TestConsoleUi.cpp  TestGame.cpp  ViljoenGameAdapter.h  WagnerGameAdapter.h  WeissmannGameAdapter.h  WenzlGameAdapter.h  WimmerGameAdapter.h
_common/windows/: windows.h
